@@ -1,3 +1,6 @@
+2021-02-20
+- Fix sflow code extended field parsing. #262 and #273
+
 2021-01-30
 - Fix processing deoding error for yaf exporter
 - Zero out tcp flags for non TCP records
